refactor: 도메인 내부 리스트 복사 기능 깊은 복사로 수정