@@ -1,6 +1,5 @@
 package lotto.domain;
 
-import java.util.Collections;
 import java.util.List;
 
 public class Lotto {
@@ -20,6 +19,6 @@ public class Lotto {
     }
 
     public List<Integer> toValue() {
-        return Collections.unmodifiableList(numbers);
+        return List.copyOf(numbers);
     }
 }
